--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         <a href="logout" class='a-logout'>Cerrar Sesion</a>
     <%} else { %>
         <h1><strong><%= name %></strong></h1>
-        <a href="/admin/login" class='a-login'>Iniciar sesion</a>
+        <a href="/admin/login" class='a-login-admin'>Administrador</a><a href="/employee/login" class='a-login-employee'>Empleado</a>
     <% } %>
 </body>
 </html>
