--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
     <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
-    <h1>Pagina de inicio</h1>
-    <% if (login) { %>
-        <h1>El usuario conectado es: <strong><%= name %></strong></h1>
-        <a href="logout" class='a-logout'>Cerrar Sesion</a>
-    <%} else { %>
-        <h1><strong><%= name %></strong></h1>
-        <a href="/admin/login" class='a-login-admin'>Administrador</a><a href="/employee/login" class='a-login-employee'>Empleado</a>
-    <% } %>
+    <h1>Work-IT</h1>
+    <h1><strong><%= name %></strong></h1>
+    <a href="/admin/login" class='a-login-admin'>Administrador</a><a href="/employee/login" class='a-login-employee'>Empleado</a>
 </body>
 </html>
