--- a/views/editTask.ejs
+++ b/views/editTask.ejs
@@ -32,32 +32,34 @@
                 </div>
               </div>
           </nav>
+          <% if (task) {%>
           <div class="container mt-4">     
             <div class="card border-secondary">  
-                <div class="card-header">Nueva Actividad</div>
+                <div class="card-header">Editar Actividad</div>
                 <div class="card-body">
-                    <form action="/newTask" method="POST">
+                    <form action="/editTask" method="POST">
+                        <input id="id" name="pro_id" value="<%= task.pro_id %>" hidden>
                         <div class="mb-3">
                             <label for="user" class="form-label">Titulo</label>
-                            <input type="text" class="form-control" id="title" name="pro_title" tabindex="1">
+                            <input type="text" class="form-control" id="title" name="pro_title" value="<%= task.pro_title %>"tabindex="1">
                         </div>  
                         <div class="mb-3">
                             <label for="user" class="form-label">Descripcion</label>
-                            <input type="text" class="form-control" id="description" name="pro_description" tabindex="1">
+                            <input type="text" class="form-control" id="description" name="pro_description" value="<%= task.pro_description %>" tabindex="1">
                         </div> 
                         <div class="mb-3">
                             <label for="user" class="form-label">Archivo (Opcional)</label>
-                            <input type="file" class="form-control" id="file" name="pro_file" tabindex="1">
+                            <input type="file" class="form-control" id="file" name="pro_file" value="<%= task.pro_file %>"tabindex="1">
                         </div> 
                         <div class="mb-3">
                             <label for="user" class="form-label">Fecha de entrega</label>
-                            <input type="date" class="form-control" id="limit_time" name="pro_limit" tabindex="1">
+                            <input type="date" class="form-control" id="limit_time" name="pro_limit" value="<%= task.pro_limit %>" tabindex="1">
                         </div>   
                         <div class="mb-3">
                             <label for="user" class="form-label">Encargado</label>
                             <select id="pro_employee" name="pro_employee" class="form-select" aria-label="Default select example" tabindex="2">
-                                <% results.forEach((user) => { %>
-                                <option value="<%= user.employee_name %>" selected><%= user.employee_name %></option>
+                                <% user.forEach((user) => { %>
+                                <option value="<%= user.employee_id %>" <%= user.employee_id == task.pro_employee_id ? "selected" : "" %> ><%= user.employee_name %></option>
                                 <% }) %>               
                             </select>
                         </div>                                   
@@ -67,7 +69,7 @@
                 </div>
                 </div>        
             </div>
-
+            <% } %>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <% if (typeof alert != "undefined")  { %>
             <script>
