--- a/views/dashboardAdminTasks.ejs
+++ b/views/dashboardAdminTasks.ejs
@@ -62,7 +62,7 @@
                         <td><%= task.pro_limit %></td>
                         <td>
                             <a href="/editTask/<%= task.pro_id%>" class="btn btn-outline-primary"><i class='bx bx-pencil'></i></a>
-                            <a href="/deleteTask" class="btn btn-outline-danger"><i class='bx bx-trash' ></i></a>
+                            <a href="/deleteTask/<%= task.pro_id%>" class="btn btn-outline-danger"><i class='bx bx-trash' ></i></a>
                         </td>
                     </tr>
                     <% }) %>
