--- a/views/completeTask.ejs
+++ b/views/completeTask.ejs
@@ -29,46 +29,44 @@
               </div>
             </div>
           </nav>
-
-          
-          <div class="container">
-            
-                <table class="table table-bordered table-striped text-center mt-4">
-                  <thead>
-                    <tr class= "bg-secondary text-white">
-                        <th>ID</th>
-                        <th>Titulo</th>
-                        <th>Completado</th>
-                        <th>Fecha de Entrega</th>
-                        <th>Acciones</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <% results.forEach((task) => { %>
-                    <tr>
-                        <td><%= task.pro_id%></td>
-                        <td><%= task.pro_title %></td>
-                    <% if (now <=  task.pro_limit.getTime()) { %>
-                        <% if (task.pro_state == 0) { %>
-                            <td>Sin entregar</td>
-                        <%} else {%>
-                            <td>Entregado</td>
-                        <% } %>
-                    <%} else { %>
-                        <td>Retrasada</td>
-                    <% } %>
-                        <td><%= task.pro_limit %></td>
-                        <td>
-                            <a href="/completeTask/<%= task.pro_id%>" class="btn btn-outline-success"><i class='bx bx-check'></i></a>
-                        </td>
-                    </tr>
-                    <% }) %>
-                  </tbody>
-              
-                </table>
-          </div>
-
+          <% if (task) {%>
+          <div class="container mt-4">     
+            <div class="card border-secondary">  
+                <div class="card-header">Entregar Actividad</div>
+                <div class="card-body">
+                    <form action="/completeTask" method="POST">
+                        <input id="id" name="pro_id" value="<%= task.pro_id %>" hidden>
+                        <input id="state" name="pro_state" value="1" hidden>  
+                        <div class="mb-3">
+                            <label for="user" class="form-label">Mensaje para el administrador</label>
+                            <input type="text" class="form-control" id="msg" name="pro_msg"  tabindex="1">
+                        </div> 
+                        <div class="mb-3">
+                            <label for="user" class="form-label">Archivo (Opcional)</label>
+                            <input type="file" class="form-control" id="file" name="pro_file" tabindex="1">
+                        </div>
+                        <button type="submit" class="btn btn-success" tabindex="5">Entregar</button>
+                        <a href="/employee/dashboard" class="btn btn-danger">Cancelar</a>
+                    </form>
+                </div>
+                </div>        
+            </div>
+            <% } %>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <% if (typeof alert != "undefined")  { %>
+            <script>
+            Swal.fire({
+              title:'<%= alertTitle %>',
+              text:'<%= alertMessage %>',
+              icon:'<%= alertIcon %>',
+              showConfirmButton: <%= showConfirmButton %>,
+              timer: <%= timer %>
+            }).then(()=>{
+              window.location='/<%= ruta %>'
+            })
+            </script>
+           <% } %>
+
     <%} else { %>
         <h1><strong><%= name %></strong></h1>
         <a href="/" class='a-login-admin'>Salir</a>
