A messaging page has been added

--- a/views/completeTask.ejs
+++ b/views/completeTask.ejs
@@ -39,7 +39,7 @@
                         <input id="state" name="pro_state" value="1" hidden>  
                         <div class="mb-3">
                             <label for="user" class="form-label">Mensaje para el administrador</label>
-                            <input type="text" class="form-control" id="msg" name="pro_msg"  tabindex="1">
+                            <input type="text" class="form-control" id="msg" name="pro_msg"  tabindex="1" required>
                         </div> 
                         <div class="mb-3">
                             <label for="user" class="form-label">Archivo (Opcional)</label>
