--- a/views/dashboardEmployee.ejs
+++ b/views/dashboardEmployee.ejs
@@ -20,6 +20,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/employee/dashboard/tasks">Tareas</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/employee/msg">Mensajes</a>
+                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
