--- a/views/adminMSG.ejs
+++ b/views/adminMSG.ejs
@@ -23,9 +23,6 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/admin/dashboard/tasks">Tareas</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/admin/msg">Mensajes</a>
-                  </li>
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -35,23 +32,23 @@
               </div>
             </div>
           </nav>
-
           <div class="container">
+            <div><a href="/newMSG" class="btn btn-outline-success"><i class='bx bx-pen'></i></a></div>
+            <hr>
+            <strong>Enviados</strong>
               <table class="table table-bordered table-striped text-center mt-4">
                   <thead>
                     <tr class= "bg-success text-white">
-                        <th>ID</th>
-                        <th>Nombre</th>
-                        <th>Correo</th>
+                        <th>Destino</th>
+                        <th>Mensaje</th>
                         <th>Acciones</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <% results.forEach((user) => { %>
+                    <% sent.forEach((sent) => { %>
                     <tr>
-                        <td><%= user.employee_id %></td>
-                        <td><%= user.employee_name %></td>
-                        <td><%= user.employee_mail %></td>
+                        <td><%= sent.msg_destination %></td>
+                        <td><%= sent.msg_text %></td>
                         <td>
                             <a href="" class="btn btn-outline-danger"><i class='bx bx-trash' ></i></a>
                         </td>
@@ -59,6 +56,28 @@
                     <% }) %>
                   </tbody>
               </table>
+              <hr>
+              <strong>Recibidos</strong>
+              <table class="table table-bordered table-striped text-center mt-4">
+                <thead>
+                  <tr class= "bg-success text-white">
+                      <th>Remitente</th>
+                      <th>Mensaje</th>                     
+                      <th>Acciones</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% received.forEach((received) => { %>
+                  <tr>
+                      <td><%= received.msg_origin %></td>
+                      <td><%= received.msg_text %></td>
+                      <td>
+                          <a href="" class="btn btn-outline-danger"><i class='bx bx-trash' ></i></a>
+                      </td>
+                  </tr>
+                  <% }) %>
+                </tbody>
+            </table>
           </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
