messaging system now working

--- a/views/employeeMSG.ejs
+++ b/views/employeeMSG.ejs
@@ -33,7 +33,7 @@
             </div>
           </nav>
           <div class="container">
-            <div><a href="/newMSG" class="btn btn-outline-success"><i class='bx bx-pen'></i></a></div>
+            <div><a href="/employee/newMSG" class="btn btn-outline-success"><i class='bx bx-pen'></i></a></div>
             <hr>
             <strong>Enviados</strong>
               <table class="table table-bordered table-striped text-center mt-4">
