--- a/views/loginAdmin.ejs
+++ b/views/loginAdmin.ejs
@@ -16,6 +16,7 @@
             <input class="btn-login" type="submit" name="btn-login" value="Login">
         </form>
         <a href="register" class="btn-register"> Registrar</a>
+        <a href="/" class="btn-back"> < Salir </a>
     </div>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
