--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -21,6 +21,9 @@
             <label for="pass">Contraseña</label>
             <input type="password" name="pass" required>
 
+            <label for="pass">Confirmar Contraseña</label>
+            <input type="password" name="pass2" required>
+
             <div style="display: inline;">
                 <a href="login" class="btn-cancel">Cancelar</a><input type="submit" class="btn-save" value="Registrar">
             </div>
