--- a/views/completeTask.ejs
+++ b/views/completeTask.ejs
@@ -9,26 +9,29 @@
   </head>
   <body>
     <% if (login) { %>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <text class="navbar-brand" href="#">Empleado</text>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/employee/dashboard/tasks">Tareas</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit"><i class='bx bx-search'></i></button>
-                  <a class="btn btn-outline-danger" href="/employee/logout"><i class='bx bx-door-open' ></i></a>
-                </form>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <text class="navbar-brand" href="#">Empleado</text>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/employee/dashboard/tasks">Tareas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/employee/msg">Mensajes</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit"><i class='bx bx-search'></i></button>
+              <a class="btn btn-outline-danger" href="/employee/logout"><i class='bx bx-door-open' ></i></a>
+            </form>
+          </div>
+        </div>
+      </nav>
           <% if (task) {%>
           <div class="container mt-4">     
             <div class="card border-secondary">  
