--- a/views/registerEmployee.ejs
+++ b/views/registerEmployee.ejs
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empleado</title>
     <link rel="stylesheet" href="/resources/css/style.css">
-
 </head>
 <body>
     
@@ -21,6 +20,9 @@
 
             <label for="pass">Contraseña</label>
             <input type="password" name="pass" required>
+
+            <label for="pass">Confirmar Contraseña</label>
+            <input type="password" name="pass2" required>
 
             <label for="email">Correo de Administrador</label>
             <input type="email" name="admin_mail" required>
