--- a/views/completeTask.ejs
+++ b/views/completeTask.ejs
@@ -25,8 +25,6 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit"><i class='bx bx-search'></i></button>
               <a class="btn btn-outline-danger" href="/employee/logout"><i class='bx bx-door-open' ></i></a>
             </form>
           </div>
@@ -49,7 +47,7 @@
                             <input type="file" class="form-control" id="file" name="pro_file" tabindex="1">
                         </div>
                         <button type="submit" class="btn btn-success" tabindex="5">Entregar</button>
-                        <a href="/employee/dashboard" class="btn btn-danger">Cancelar</a>
+                        <a href="/employee/dashboard/tasks" class="btn btn-danger">Cancelar</a>
                     </form>
                 </div>
                 </div>        
