--- a/views/dashboardAdminTasks.ejs
+++ b/views/dashboardAdminTasks.ejs
@@ -28,8 +28,6 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit"><i class='bx bx-search'></i></button>
               <a class="btn btn-outline-danger" href="/admin/logout"><i class='bx bx-door-open' ></i></a>
             </form>
           </div>
@@ -38,7 +36,6 @@
 
           
           <div class="container">
-            
             <a href="/newTask" class="btn btn-outline-primary"><i class='bx bx-plus'></i></a>
                 <table class="table table-bordered table-striped text-center mt-4">
                   <thead>
@@ -48,6 +45,7 @@
                         <th>Empleado</th>
                         <th>Completado</th>
                         <th>Mensaje del empleado</th>
+                        <th>Archivo</th>
                         <th>Fecha de Entrega</th>
                         <th>Acciones</th>
                     </tr>
@@ -72,6 +70,7 @@
                         <%} else {%>
                           <td><%= task.pro_msg %></td>
                         <% } %>
+                        <td><%= task.pro_file %></td>
                         <td><%= task.pro_limit %></td>
                         <td>
                             <a href="/editTask/<%= task.pro_id%>" class="btn btn-outline-primary"><i class='bx bx-pencil'></i></a>
