--- a/views/adminMSG.ejs
+++ b/views/adminMSG.ejs
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <title>Dashboard</title>
   </head>
   <body>
     <% if (login) { %>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="green margin-bottom navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Administrador</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,12 +35,12 @@
         </div>
       </nav>
           <div class="container">
-            <div><a href="/admin/newMSG" class="btn btn-outline-success"><i class='bx bx-pen'></i></a></div>
+            <div><a href="/admin/newMSG" class="btn btnAddMSG"><i class='bx bx-pen'></i>Añadir mensaje</a></div>
             <hr>
             <strong>Enviados</strong>
-              <table class="table table-bordered table-striped text-center mt-4">
+              <table class="content-table all">
                   <thead>
-                    <tr class= "bg-success text-white">
+                    <tr>
                         <th>Destino</th>
                         <th>Mensaje</th>
                     </tr>
@@ -55,9 +56,9 @@
               </table>
               <hr>
               <strong>Recibidos</strong>
-              <table class="table table-bordered table-striped text-center mt-4">
+              <table class="content-table all">
                 <thead>
-                  <tr class= "bg-success text-white">
+                  <tr>
                       <th>Remitente</th>
                       <th>Mensaje</th>                     
                   </tr>
