--- a/views/adminNewMSG.ejs
+++ b/views/adminNewMSG.ejs
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <title>Dashboard</title>
   </head>
   <body>
     <% if (login) { %>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="green navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Administrador</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,8 +54,8 @@
                                 <% }) %>               
                             </select>
                         </div>                                   
-                        <button type="submit" class="btn btn-primary" tabindex="5">Enviar</button>
-                        <a href="/admin/msg" class="btn btn-secondary">Cancelar</a>
+                        <button type="submit" class="btn btnAddMSG" tabindex="5">Enviar</button>
+                        <a href="/admin/msg" class="btn btnCancel2">Cancelar</a>
                     </form>
                 </div>
                 </div>        
