--- a/views/dashboardAdmin.ejs
+++ b/views/dashboardAdmin.ejs
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
     <title>Dashboard</title>
   </head>
   <body>
     <% if (login) { %>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav  class="green navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Administrador</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,9 +37,9 @@
           </nav>
 
           <div class="container">
-              <table class="table table-bordered table-striped text-center mt-4">
+              <table class="content-table">
                   <thead>
-                    <tr class= "bg-success text-white">
+                    <tr>
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Correo</th>
@@ -57,8 +59,8 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <%} else { %>
-        <h1><strong><%= name %></strong></h1>
-        <a href="/" class='a-login-admin'>Salir</a>
+        <h1 ><strong><%= name %></strong></h1>
+        <a class="btn-back" href="/" class='a-login-admin'>Salir</a>
     <% } %>
   </body>
 </html>
