--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <title>Index</title>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="/resources/css/style.css">
 </head>
-<body>
-    <h1>Work-IT</h1>
-    <a href="/admin/login" class='a-login-admin'>Administrador</a><a href="/employee/login" class='a-login-employee'>Empleado</a>
+<body class="indexBody carousel" id="slider">
+    <section class="containerJobs">
+        <h1 class="title">Work-IT</h1>
+        <section class="linkContainer">
+        <a href="/admin/login" class='a-login-admin'>Administrador</a><a href="/employee/login" class='a-login-employee'>Empleado</a>
+        </section>
+    </section>
+    <section class="containerBorder"></section>
+    <script src="/resources/js/slider.js"></script>
 </body>
 </html>
