--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="">
     <link rel="stylesheet" href="/resources/css/style.css">
 </head>
-<body>
-    
+<body class="indexBody">
+    <section class="border">
     <div class= "register-form">
         <h1>Registro Administrador</h1>
         <form action="/admin/register" method="post">
@@ -46,5 +49,6 @@
         })
         </script>
        <% } %>
+    </section>
 </body>
 </html>
