--- a/views/newTask.ejs
+++ b/views/newTask.ejs
@@ -24,10 +24,14 @@
                     <li class="nav-item">
                       <a class="nav-link active" aria-current="page" href="/admin/dashboard/tasks">Tareas</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/admin/msg">Mensajes</a>
+                    </li> 
                   </ul>
                   <form class="d-flex">
                     <a class="btn btn-outline-danger" href="/admin/logout"><i class='bx bx-door-open' ></i></a>
                   </form>
+
                 </div>
               </div>
           </nav>
